@startuml

class Produits {
    - nom : String
    - reference_fk: Integer
    - distributeur_fk: Integer
    - categories_fk : Integer
}

class Distributeurs {
    - nom: String
}

class References {
    - nom: String
}

class Categories {
    - nom: String
}

class User {
    - firstName: String
    - lastName: String
    - email: String
    - password: String
    - picture: String
}

User "1..*" --> "0..*" Produits
Produits "1" --> "0..*" Categories
Produits "1..*" --> "0..*" Distributeurs
Produits "1" --> "1" References


@enduml
